--- a/JM.XF.Mvx.NerdZone/JM.XF.Mvx.NerdZone.Android/02_JM.XF.Mvx.NerdZone.Android.csproj
+++ b/JM.XF.Mvx.NerdZone/JM.XF.Mvx.NerdZone.Android/02_JM.XF.Mvx.NerdZone.Android.csproj
@@ -50,16 +50,21 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="Mono.Android.Export" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.947036" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="MvvmCross.Forms">
+      <Version>6.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -88,9 +93,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JM.XF.Mvx.NerdZone\JM.XF.Mvx.NerdZone.csproj">
-      <Project>{BFC548A8-493B-48DA-9E1D-E1B7B61F99FC}</Project>
-      <Name>JM.XF.Mvx.NerdZone</Name>
+    <ProjectReference Include="..\JM.XF.Mvx.NerdZone.Forms\01_JM.XF.Mvx.NerdZone.Forms.csproj">
+      <Project>{7C4D63F3-C50E-4D00-832B-C0164AF228AA}</Project>
+      <Name>01_JM.XF.Mvx.NerdZone.Forms</Name>
     </ProjectReference>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
