--- a/JM.XF.Mvx.NerdZone/JM.XF.Mvx.NerdZone.iOS/03_JM.XF.Mvx.NerdZone.iOS.csproj
+++ b/JM.XF.Mvx.NerdZone/JM.XF.Mvx.NerdZone.iOS/03_JM.XF.Mvx.NerdZone.iOS.csproj
@@ -65,6 +65,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setup.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -122,12 +123,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.947036" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="MvvmCross.Forms">
+      <Version>6.4.1</Version>
+    </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\JM.XF.Mvx.NerdZone\JM.XF.Mvx.NerdZone.csproj">
-      <Project>{BFC548A8-493B-48DA-9E1D-E1B7B61F99FC}</Project>
-      <Name>JM.XF.Mvx.NerdZone</Name>
+    <ProjectReference Include="..\JM.XF.Mvx.NerdZone.Forms\01_JM.XF.Mvx.NerdZone.Forms.csproj">
+      <Project>{7C4D63F3-C50E-4D00-832B-C0164AF228AA}</Project>
+      <Name>01_JM.XF.Mvx.NerdZone.Forms</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
